Completed Grid Page and Styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap');
 :root {
+    --dark-magenta: hsl(313, 88%, 36%);
     --bright-orange: hsl(31, 77%, 52%);
+    --dark-red: hsl(0, 92%, 29%);
     --dark-cyan: hsl(184, 100%, 22%);
     --very-dark-cyan: hsl(179, 100%, 13%);
     --transparent-white: hsla(0, 0%, 100%, 0.75);
@@ -92,33 +94,7 @@ main {
     border-radius:  0 5px 5px 0;
 }
 
-@media screen and (max-width:375px) {
-        
-    .cards {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height: 100%;
-        width: 80%;
-        margin: 10px;
-    }
-    
-    .card {
-        display: flex;
-        flex-direction: column;
-        align-items: start;
-        justify-content: center;
-        padding: 20px 45px;
-        min-height: 420px;
-        max-width: 300px;
-        margin: 10px 0;
-        border-radius: 5px !important;
-    }
-
-}
-
-@media screen and (max-width:512) {
+@media screen and (max-width:768) {
     
     .cards {
         display: flex;
@@ -126,33 +102,79 @@ main {
         align-items: center;
         justify-content: center;
         height: 100%;
-        width: 80%;
-        margin: 10px;
-    }
-
-    .card {
-        display: flex;
-        flex-direction: column;
-        align-items: start;
-        justify-content: center;
-        padding: 20px 45px;
-        min-height: 420px;
-        max-width: 300px;
-        margin: 10px 0;
-        border-radius: 5px !important;
-    }
-  
-}
-
-@media screen and (max-width:1440px) {
-    
-    .cards {
         width: 90%;
         margin: 10px;
     }
 
     .card {
-        margin: 10px 0;
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        justify-content: center;
+        padding: 20px 45px;
+        min-height: 420px;
+        margin: 10px;
+        border-radius: 5px !important;
     }
   
+}
+
+
+
+/*Grid Styles*/
+
+.grid-body {
+    background: var(--transparent-white);
+    width: 100%;
+    height: 100%;
+}
+
+.container {
+    display: grid;
+    height: 100%;
+    width: 90%;
+    grid-template-columns: repeat(5, 1fr);
+    grid-gap: 20px;
+    margin: auto;
+    padding: 40px;
+}
+
+.grid-item {
+    color: var(--transparent-white);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 100%;
+    border-radius: 2px;
+}
+
+.item-1 {
+    background: var(--very-dark-cyan);
+    grid-column: 1/4;
+    grid-row: 1/3;
+}
+
+.item-2 {
+    background: var(--bright-orange);
+    grid-column: 4/6;
+    grid-row: 1/3;
+}
+
+.item-3 {
+    background: var(--dark-red);
+    grid-column: 1/3;
+    grid-row: 3/5;
+}
+
+.item-4 {
+    background: var(--dark-magenta);
+    grid-column: 3/6;
+    grid-row: 3/4;
+}
+
+.item-5 {
+    background: var(--dark-magenta);
+    grid-column: 3/6;
+    grid-row: 4/5;
 }
